# src/service/AntenasFavoritasControllerService.js
@@ -1,64 +1,64 @@
 'use strict';
 
-var sql = require('../utils/db.js');
+
 /**
  * Create Antena Favorita
  *
  * body AntenaFavorita  (optional)
  * returns AntenaFavorita
  **/
-exports.createAntenaFavorita = function (body) {
-  return new Promise(function (resolve, reject) {
+exports.createAntenaFavorita = function(body) {
+  return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-      id: 1,
-      id_utilizador: 1,
-      id_antena: 1,
-    };
+  "id" : 1,
+  "id_utilizador" : 1,
+  "id_antena" : 1
+};
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
       resolve();
     }
   });
-};
+}
+
 
 /**
  * Delete Antena Favorita
  *
- * id Long
+ * id Long 
  * no response value expected for this operation
  **/
-exports.deleteAntenaFavorita = function (id) {
-  return new Promise(function (resolve, reject) {
+exports.deleteAntenaFavorita = function(id) {
+  return new Promise(function(resolve, reject) {
     resolve();
   });
-};
+}
+
 
 /**
  * Retrieve Antenas Favoritas
  *
  * returns List
  **/
-exports.retrieveAntenasFavoritas = function () {
-  return new Promise(function (resolve, reject) {
+exports.retrieveAntenasFavoritas = function() {
+  return new Promise(function(resolve, reject) {
     var examples = {};
-    examples['application/json'] = [
-      {
-        id: 1,
-        id_utilizador: 1,
-        id_antena: 1,
-      },
-      {
-        id: 1,
-        id_utilizador: 1,
-        id_antena: 1,
-      },
-    ];
+    examples['application/json'] = [ {
+  "id" : 1,
+  "id_utilizador" : 1,
+  "id_antena" : 1
+}, {
+  "id" : 1,
+  "id_utilizador" : 1,
+  "id_antena" : 1
+} ];
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
       resolve();
     }
   });
-};
+}
+
