# src/service/ComentariosControllerService.js
@@ -1,75 +1,70 @@
 'use strict';
 
-var sql = require('../utils/db.js');
+
 /**
  * Create Comentario
  *
  * body Comentario  (optional)
  * returns Comentario
  **/
-exports.createComentario = function (body) {
-  return new Promise(function (resolve, reject) {
-    console.log(body);
-    sql.query(
-      'Insert into Comentarios (id_utilizador, id_antena)',
-      [body.id_utilizador, body.id_antena],
-      function (err, res) {
-        if (err) {
-          console.log(err);
-          reject(err);
-        } else {
-          console.log(res.insertId);
-          resolve(res.insertedId);
-        }
-      },
-    );
-  });
+exports.createComentario = function(body) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+  "id" : 1,
+  "id_utilizador" : 1,
+  "id_antena" : 1,
+  "conteudo" : "Antena sem baterias",
+  "timestamp" : "10-04-2021 09:00:00"
 };
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
 
 /**
  * Delete Comentario
  *
- * id Long
+ * id Long 
  * no response value expected for this operation
  **/
-exports.deleteComentario = function (id) {
-  return new Promise(function (resolve, reject) {
-    sql.query(
-      'Delete from Comentarios where id = ? ',
-      [id],
-      function (err, res) {
-        if (err || !res.affectedRows) {
-          console.log(err);
-          console.log(res);
-          reject();
-        } else {
-          console.log(res);
-          resolve();
-        }
-      },
-    );
+exports.deleteComentario = function(id) {
+  return new Promise(function(resolve, reject) {
+    resolve();
   });
-};
+}
+
 
 /**
  * Retrieve Comentarios
  *
  * returns List
  **/
-exports.retrieveComentarios = function (id) {
-  return new Promise(function (resolve, reject) {
-    sql.query(
-      'Select * from Comentarios where id = ?',
-      [id],
-      function (err, res) {
-        if (err) {
-          console.log(err);
-          reject(err);
-        } else {
-          console.log(res);
-          resolve(res[0]);
-        }
-      },
-    );
+exports.retrieveComentarios = function() {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = [ {
+  "id" : 1,
+  "id_utilizador" : 1,
+  "id_antena" : 1,
+  "conteudo" : "Antena sem baterias",
+  "timestamp" : "10-04-2021 09:00:00"
+}, {
+  "id" : 1,
+  "id_utilizador" : 1,
+  "id_antena" : 1,
+  "conteudo" : "Antena sem baterias",
+  "timestamp" : "10-04-2021 09:00:00"
+} ];
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
   });
-};
+}
+
